// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render DateInput correctly without any given errors 1`] = `
<FormField
  error={false}
  width="11"
>
  <ForwardRef
    id="test-id"
    onChange={[MockFunction]}
    placeholder="Test DateInput PlaceHolder"
    value={"2021-12-24T10:33:30.000Z"}
  />
</FormField>
`;

exports[`Should set Form.Field error to true and render Label with given error message 1`] = `
<FormField
  error={true}
  width="11"
>
  <ForwardRef
    onChange={[MockFunction]}
    placeholder="Test DateInput PlaceHolder"
    type="text"
    value={"2021-12-24T10:33:30.000Z"}
  />
  <Label
    basic={true}
    color="red"
  >
    test error message
  </Label>
</FormField>
`;
